Bug 1183203 - Adjust positioning for identity-box in Dev Edition theme so the hover state is clipped properly;r=paolo
UltraBlame original commit: e6832b93537891fa94655b541c3cbef606612e6e

--- a/browser/themes/osx/devedition.css
+++ b/browser/themes/osx/devedition.css
@@ -94,6 +94,13 @@
 
 
 
+#identity-box {
+  margin-top: -1px !important;
+  margin-bottom: -1px !important;
+}
+
+
+
 .tab-close-button[visuallyselected=true]:not(:hover) {
   -moz-image-region: rect(0, 64px, 16px, 48px);
 }
